--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -168,18 +168,7 @@
                 </div>
             </div>
         </section>
-        <!-- Tutorial Section-->
-        <section class="bg-black" id="contact">
-            <div id="container">
-                <h1>Testing</h1>
-                <p>Click here to see a Hello Natalie:</p>
-                <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
-                <div id="quote-container"></div>
-                <p>Click here to see a parsed JSON string:</p>
-                <button onclick="changeAListJson()">Fetch a JSON string!</button>
-                <div id="hardcode-messages"></div>
-            </div>
-        </section>
+        <!-- Contact Section -->
         <section class="contact-section bg-black" id="">
             <div class="container">        
                 <div class="social d-flex justify-content-center">
@@ -193,15 +182,9 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
-                        <!-- <p>Choose max number of comments:</p>
-                        <input type="number" name="max-comments" min="1" max="3" value="1">
-                        <button class="btn btn-primary mx-auto" type="submit" onclick="loadComments()">Submit</button> -->
-                        
                         <p>Choose max number of comments:</p>
                         <input type="number" id="maxComments" name="max-comments" min="1" max="3" value="1">
-                        <br/><br/>
                         <button class="btn btn-primary mx-auto" type="submit" onclick="loadComments()">Submit</button>
-                        
                         <form action="/data" class="form-inline d-flex" method="POST">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
                             <button class="btn btn-primary mx-auto" type="submit">Comment</button>
