--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -169,14 +169,7 @@
             </div>
         </section>
         <!-- Contact Section -->
-        <section class="contact-section bg-black" id="">
-            <div class="container">        
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
-                </div>
-            </div>
-        </section>
-        <section class="signup-section" id="signup">
+        <section class="signup-section" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -194,6 +187,14 @@
                 </div>
             </div>
         </section>
+        <!-- TODO(ntarn): Fix padding on contact icons. hello -->
+        <section class="contact-section bg-black" id="">
+          <div class="container">        
+            <div class="social d-flex justify-content-center">
+              <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+      </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Natalie Tarn 2020</div></footer>
         <!-- Bootstrap core JS-->
