--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </header>
-        <!-- TODO(ntarn):Add bullet point of technologies -->
+        <!-- TODO(ntarn): Add bullet point of technologies. -->
         <!-- About-->
         <section class="about-section text-left" id="about">
             <div class="container">
@@ -176,7 +176,7 @@
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
                         <p>Choose max number of comments:</p>
-                        <input type="number" id="maxComments" name="max-comments" min="1" max="3" value="1">
+                        <input type="number" id="maxComments" name="max-comments" min="1" max="3" value="">
                         <button class="btn btn-primary mx-auto" type="submit" onclick="loadComments()">Submit</button>
                         <form action="/data" class="form-inline d-flex" method="POST">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
@@ -187,7 +187,7 @@
                 </div>
             </div>
         </section>
-        <!-- TODO(ntarn): Fix padding on contact icons. hello -->
+        <!-- TODO(ntarn): Fix padding on contact icons. -->
         <section class="contact-section bg-black" id="">
           <div class="container">        
             <div class="social d-flex justify-content-center">
