--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,7 +17,7 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" onload="loadComments()">
+    <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
@@ -175,14 +175,18 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
-                        <p>Choose max number of comments:</p>
+                        <a href="comments.html" class="btn btn-primary mx-auto">Say Hello!</a>
+                        <!-- <p>Choose max number of comments:</p>
                         <input type="number" id="maxComments" name="max-comments" min="1" max="3" value="">
                         <button class="btn btn-primary mx-auto" type="submit" onclick="loadComments()">Submit</button>
                         <form action="/data" class="form-inline d-flex" method="POST">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
                             <button class="btn btn-primary mx-auto" type="submit">Comment</button>
-                        </form>
-                        <ul id="comment-list"></ul>
+                            <p>Upload an image:</p>
+                            <input type="file" name="image">
+                            <button class="btn btn-primary mx-auto">Submit</button>
+                        </form> -->
+                        <!-- <ul id="comment-list"></ul> -->
                     </div>
                 </div>
             </div>
