--- a/portfolio/src/main/webapp/comments.html
+++ b/portfolio/src/main/webapp/comments.html
@@ -17,17 +17,16 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" onload="loadComments(); fetchBlobstoreUrlAndShowForm();">
+    <body id="page-top" onload="fetchBlobstoreUrlAndShowForm()">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="nav-link js-scroll-trigger" href="#page-top">Home</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
+                <a class="nav-link js-scroll-trigger" href="index.html#page-top">Home</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#projects">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="index.html#contact">Contact</a></li>
-                        <!DOCTYPE html>
                     </ul>
                 </div>
             </div>
@@ -39,16 +38,28 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
-                        <p>Choose max number of comments:</p>
-                        <input type="number" id="maxComments" name="max-comments" min="1" max="3" value="">
-                        <button class="btn btn-primary mx-auto" type="submit" onclick="loadComments()">Submit</button>
-                        <form action="/data" class="form-inline d-flex" method="POST">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
-                            <button class="btn btn-primary mx-auto" type="submit">Comment</button>
-                            <p>Upload an image:</p>
-                            <input type="file" name="image">
-                            <button class="btn btn-primary mx-auto">Submit</button>
+                        <form id="my-form" class="form-inline d-flex" method="POST" enctype="multipart/form-data">
+                          <!-- <p>Type some text:</p> -->
+                          <!-- <textarea name="message"></textarea> -->
+                          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
+                          <br/>
+                          <p>Upload an image:</p>
+                          <input type="file" name="image">
+                          <br/><br/>
+                          <button class="btn btn-primary mx-auto" type="submit">Submit</button>
                         </form>
+                        <!-- <form action="/data" class="form-inline d-flex" method="POST">
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
+                            <button class="btn btn-primary mx-auto" type="submit">Comment</button>        
+                        </form> -->
+                        <p>Choose max number of comments:</p>
+                        <select id="maxComments" name="max-comments" class="form-control" onchange="loadComments()">
+                          <option value="1">1</option>
+                          <option value="2" selected="">2</option>
+                          <option value="3">3</option>
+                          <option value="15">15</option>
+                          <option value="20">20</option>
+                        </select>
                         <ul id="comment-list"></ul>
                     </div>
                 </div>
