--- a/portfolio/src/main/webapp/comments.html
+++ b/portfolio/src/main/webapp/comments.html
@@ -17,7 +17,7 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" onload="fetchBlobstoreUrlAndShowForm()">
+    <body id="page-top" onload="loadComments()">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
@@ -44,7 +44,7 @@
                           <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
                           <br/>
                           <p>Upload an image:</p>
-                          <input type="file" name="image">
+                          <input type="file" name="image" onchange="fetchBlobstoreUrlAndShowForm()">
                           <br/><br/>
                           <button class="btn btn-primary mx-auto" type="submit">Submit</button>
                         </form>
@@ -55,7 +55,7 @@
                         <p>Choose max number of comments:</p>
                         <select id="maxComments" name="max-comments" class="form-control" onchange="loadComments()">
                           <option value="1">1</option>
-                          <option value="2" selected="">2</option>
+                          <option value="2">2</option>
                           <option value="3">3</option>
                           <option value="15">15</option>
                           <option value="20">20</option>
