--- a/portfolio/src/main/webapp/comments.html
+++ b/portfolio/src/main/webapp/comments.html
@@ -17,7 +17,7 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" onload="loadComments()">
+    <body id="page-top" onload="fetchBlobstoreUrlAndShowForm()">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
@@ -39,21 +39,15 @@
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
                         <form id="my-form" class="form-inline d-flex" method="POST" enctype="multipart/form-data">
-                          <!-- <p>Type some text:</p> -->
-                          <!-- <textarea name="message"></textarea> -->
                           <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
                           <br/>
                           <p>Upload an image:</p>
                           <input type="file" name="image" onchange="fetchBlobstoreUrlAndShowForm()">
                           <br/><br/>
-                          <button class="btn btn-primary mx-auto" type="submit">Submit</button>
-                        </form>
-                        <!-- <form action="/data" class="form-inline d-flex" method="POST">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
-                            <button class="btn btn-primary mx-auto" type="submit">Comment</button>        
-                        </form> -->
+                          <button class="btn btn-primary mx-auto" type="submit" onclick="">Comment</button>
+                        </form> 
                         <p>Choose max number of comments:</p>
-                        <select id="maxComments" name="max-comments" class="form-control" onchange="loadComments()">
+                        <select id="max-comments" name="max-comments" class="form-control" onchange="loadComments()">
                           <option value="1">1</option>
                           <option value="2">2</option>
                           <option value="3">3</option>
