fix merge conflict

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fun.html">Fun</a></li>
                         <!DOCTYPE html>
                     </ul>
                 </div>
@@ -39,7 +40,7 @@
                     <h2 class="text-white-50 mx-auto mt-2 mb-2">Hi, my name is</h2>
                     <h1 class="mx-auto my-0 text-uppercase">Natalie Tarn</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">I'm a junior at Duke University and a software engineer with a passion for AI/ML and the planet.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="contact">Get In Touch</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="#contact">Get In Touch</a>
                 </div>
             </div>
         </header>
