--- a/portfolio/src/main/webapp/fun.html
+++ b/portfolio/src/main/webapp/fun.html
@@ -8,6 +8,7 @@
         <title>Natalie Tarn | Software Engineer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXanqT2bm8j5LjYpw0MD4o9Fnx-NZiQAc"></script>
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
@@ -17,7 +18,7 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" onload="loadComments(); fetchBlobstoreUrlAndShowForm();">
+    <body id="page-top" onload="createMap();">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
@@ -32,34 +33,11 @@
                 </div>
             </div>
         </nav>
-        <!-- Contact Section -->
-        <section class="signup-section" id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Get In Touch</h2>
-                        <form id="my-form" class="form-inline d-flex" method="POST" enctype="multipart/form-data">
-                          <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." />
-                          <br/>
-                          <p>Upload an image:</p>
-                          <input type="file" name="image" onchange="fetchBlobstoreUrlAndShowForm()">
-                          <br/><br/>
-                          <button class="btn btn-primary mx-auto" type="submit" onclick="">Comment</button>
-                        </form> 
-                        <p>Choose max number of comments:</p>
-                        <select id="max-comments" name="max-comments" class="form-control" onchange="loadComments()">
-                          <option value="1">1</option>
-                          <option value="2">2</option>
-                          <option value="3">3</option>
-                          <option value="15">15</option>
-                          <option value="20">20</option>
-                        </select>
-                        <ul id="comment-list"></ul>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <header class="">
+          <div class="container">
+            <div id="map"></div>
+        	</div>
+      	</header>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Natalie Tarn 2020</div></footer>
         <!-- Bootstrap core JS-->
@@ -70,5 +48,6 @@
         <!-- Core themes JS-->
         <script src="js/customscript.js"></script>
         <script src="js/scripts.js"></script>
-      </body>
+    </body>
 </html>
+        
