--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,6 +8,8 @@
         <title>Natalie Tarn | Software Engineer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXanqT2bm8j5LjYpw0MD4o9Fnx-NZiQAc&callback=createMap"></script>
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
@@ -17,7 +19,7 @@
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body id="page-top" onload="createMap()">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
@@ -181,6 +183,7 @@
                 </div>
             </div>
         </section>
+        <div id="map"></div>
         <!-- TODO(ntarn): Fix padding on contact icons. -->
         <section class="contact-section bg-black" id="">
           <div class="container">        
@@ -197,6 +200,7 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core themes JS-->
+        <script src="js/mapscript.js"></script>
         <script src="js/customscript.js"></script>
         <script src="js/scripts.js"></script>
     </body>
