--- a/portfolio/src/main/webapp/comments.html
+++ b/portfolio/src/main/webapp/comments.html
@@ -47,7 +47,7 @@
                           <br/><br/>
                           <button class="btn btn-primary mx-auto" type="submit" onclick="fetchBlobstoreUrlAndShowForm()">Comment</button>
                         </form> 
-                        <p>Choose max number of comments:</p>
+                        <p>Choose max number of comments to display:</p>
                         <select id="max-comments" name="max-comments" class="form-control" onchange="loadComments()">
                           <option id ="default-max" value="-1">Choose an Option</option>
                           <option value="1">1</option>
