--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,17 +54,18 @@
                     <div class="col-lg-8 mx-auto">
                         <div class="pf-pic"></div>
                         <h2 class="text-white mb-4">About Me</h2>
-                        <!-- <div class="pf-pic"></div> -->
                         <p class="text-white-50">I am a learner who grows in challenging work environments. I chose computer science and biology as my majors to help people and the planet, whether it's 
                             <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
                             Here are a few technologies I’ve worked with:
                         </p>
                         <p class="text-white" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1) 0s, transform 0.4s cubic-bezier(0.5, 0, 0, 1) 0s;">Languages:</p>
                         <p class="text-white-50" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1) 0s, transform 0.4s cubic-bezier(0.5, 0, 0, 1) 0s;">Proficient in Java | Python <br> 
-                          Familiar with C | R | HTML | CSS | Javascript | C++ | MIPS </p>
+                          Familiar with C | R | HTML | CSS | Javascript | C++ | MIPS
+                        </p>
                         <p class="text-white" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1) 0s, transform 0.4s cubic-bezier(0.5, 0, 0, 1) 0s;">Software:</p>
                         <p class="text-white-50" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1) 0s, transform 0.4s cubic-bezier(0.5, 0, 0, 1) 0s;">Intellij IDEA | Eclipse | bash | git |
-                          RStudio | Android Studio | Jupyter Notebook | AWS API Gateway</p>
+                          RStudio | Android Studio | Jupyter Notebook | AWS API Gateway
+                        </p>
                     </div>
                 </div>
             </div>
@@ -191,7 +192,7 @@
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
                         <p class="text-white-50">I'm currently looking for summer internships for 2021 in data science and SWE. I'm also always open to conversation and feedback.
-                          If just want to say hi, feel free to leave a comment, or contact me using the icons at the bottom!
+                          The best way to contact me is through email, using the contact icons at the bottom. If just want to say hi, feel free to leave a comment!
                         </p> 
                         <br> 
                         <a href="comments.html" class="btn btn-primary mx-auto">Say Hello!</a>
