transfer to personal account

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXanqT2bm8j5LjYpw0MD4o9Fnx-NZiQAc&callback=createMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsebD1T4XuEsAPHrZs07bMn1kqQ3CIPl4&callback=createMap"></script>
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fun.html">Fun</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="fun.html">Fun</a></li> -->
                         <!DOCTYPE html>
                     </ul>
                 </div>
